force-app/main/default/objects/AI_Workspace_Staging__c/AI_Workspace_Staging__c.object-meta.xml
<CustomObject>
    <label>AI Workspace Staging</label>
    <nameField>
        <displayFormat>WS-{000000}</displayFormat>
        <label>Staging Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Workspace Staging</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>