force-app/main/default/objects/AI_Workspace_Staging__c/fields/AI_Workspace_User__c.field-meta.xml
<CustomField>
    <fullName>AI_Workspace_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the AI Workspace User record that this staging record belongs to</description>
    <label>AI Workspace User</label>
    <referenceTo>AI_Workspace_User__c</referenceTo>
    <relationshipLabel>Workspace Staging Records</relationshipLabel>
    <relationshipName>Workspace_Staging_Records</relationshipName>
    <type>Lookup</type>
</CustomField>