force-app/main/default/objects/AI_Workspace_Staging__c/fields/Attendees__c.field-meta.xml
<CustomField>
    <fullName>Attendees__c</fullName>
    <label>Attendees</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>