force-app/main/default/objects/AI_Workspace_Staging__c/fields/Bcc_Address__c.field-meta.xml
<CustomField>
    <fullName>Bcc_Address__c</fullName>
    <label>BCC Address</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>