force-app/main/default/objects/AI_Workspace_Staging__c/fields/Cc_Address__c.field-meta.xml
<CustomField>
    <fullName>Cc_Address__c</fullName>
    <label>CC Address</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>