force-app/main/default/objects/AI_Workspace_Staging__c/fields/Email_Message__c.field-meta.xml
<CustomField>
    <fullName>Email_Message__c</fullName>
    <description>EmailMessage record ID created from this staging record after matching</description>
    <externalId>true</externalId>
    <label>Email Message ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>