force-app/main/default/objects/AI_Workspace_Staging__c/fields/Html_Body__c.field-meta.xml
<CustomField>
    <fullName>Html_Body__c</fullName>
    <label>HTML Body</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>