force-app/main/default/objects/AI_Workspace_Staging__c/fields/ICalUID__c.field-meta.xml
<CustomField>
    <fullName>ICalUID__c</fullName>
    <externalId>true</externalId>
    <label>iCalUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>