force-app/main/default/objects/AI_Workspace_Staging__c/fields/Is_Incoming__c.field-meta.xml
<CustomField>
    <fullName>Is_Incoming__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Incoming</label>
    <type>Checkbox</type>
</CustomField>