force-app/main/default/objects/AI_Workspace_Staging__c/fields/Message_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Message_Identifier__c</fullName>
    <label>Message Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>