force-app/main/default/objects/AI_Workspace_Staging__c/fields/Organizer__c.field-meta.xml
<CustomField>
    <fullName>Organizer__c</fullName>
    <label>Organizer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>