force-app/main/default/objects/AI_Workspace_Staging__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GOOGLE_CALENDAR</fullName>
                <label>Google Calendar</label>
            </value>
            <value>
                <fullName>GOOGLE_TASKS</fullName>
                <label>Google Tasks</label>
            </value>
            <value>
                <fullName>GMAIL_EMAIL</fullName>
                <label>Gmail Email</label>
            </value>
            <value>
                <fullName>MICROSOFT_TASKS</fullName>
                <label>Microsoft Tasks</label>
            </value>
            <value>
                <fullName>MICROSOFT_EMAIL</fullName>
                <label>Microsoft Email</label>
            </value>
            <value>
                <fullName>MICROSOFT_CALENDAR</fullName>
                <label>Microsoft Calendar</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>