force-app/main/default/objects/AI_Workspace_Staging__c/fields/Provider_Conversation_Id__c.field-meta.xml
<CustomField>
    <fullName>Provider_Conversation_Id__c</fullName>
    <label>Provider Conversation Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>