force-app/main/default/objects/AI_Workspace_Staging__c/fields/Reminder_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Reminder_DateTime__c</fullName>
    <label>Reminder DateTime</label>
    <type>DateTime</type>
</CustomField>