force-app/main/default/objects/AI_Workspace_Staging__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the staging record. Staged = awaiting matching, Ready = matched to Lead/Contact and ready for import, Imported = successfully imported to Salesforce.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Staged</fullName>
                <default>true</default>
                <label>Staged</label>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Imported</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Errored</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
                <isActive>false</isActive>
                <label>Archived</label>
            </value>
            <value>
                <fullName>Deleted</fullName>
                <isActive>false</isActive>
                <label>Deleted</label>
            </value>
            <value>
                <fullName>Linked</fullName>
                <isActive>false</isActive>
                <label>Linked</label>
            </value>
            <value>
                <fullName>Matched</fullName>
                <isActive>false</isActive>
                <label>Matched</label>
            </value>
            <value>
                <fullName>Unmatched</fullName>
                <isActive>false</isActive>
                <label>Unmatched</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>