force-app/main/default/objects/AI_Workspace_Staging__c/fields/Sync_Log__c.field-meta.xml
<CustomField>
    <fullName>Sync_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sync Log</label>
    <referenceTo>AI_Workspace_Sync_Log__c</referenceTo>
    <relationshipLabel>Staging Records</relationshipLabel>
    <relationshipName>Staging_Records</relationshipName>
    <type>Lookup</type>
</CustomField>