force-app/main/default/objects/AI_Workspace_Staging__c/fields/Task_Priority__c.field-meta.xml
<CustomField>
    <fullName>Task_Priority__c</fullName>
    <label>Task Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>