force-app/main/default/objects/AI_Workspace_Staging__c/fields/Text_Body__c.field-meta.xml
<CustomField>
    <fullName>Text_Body__c</fullName>
    <label>Text Body</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>