force-app/main/default/objects/AI_Workspace_Staging__c/fields/WhoId__c.field-meta.xml
<CustomField>
    <fullName>WhoId__c</fullName>
    <description>Stores Who Id information for workspace staging records</description>
    <label>Who Id</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>