force-app/main/default/objects/AI_Workspace_Staging__c/recordTypes/Calendar.recordType-meta.xml
<RecordType>
    <fullName>Calendar</fullName>
    <active>true</active>
    <label>Calendar</label>
</RecordType>